# Python-Study-Dashboard

./: .gitignore  Instalations-Anleitung.odt  README.md  UI.py  database.db  main.py  models.py  pyproject.toml  study.json  ui.py
StudyDashboard/: __main__.py  importer.py  main.py  models.py
python_study_dashboard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
